--- a/.gitmodules
+++ b/.gitmodules
@@ -4,6 +4,6 @@
 [submodule "vvt.nu-sublime"]
 	path = vvt.nu-sublime
 	url = https://github.com/rendom/vvt.nu-sublime
-[submodule "vvt.nu-cli"]
-	path = vvt.nu-cli
-	url = https://github.com/rendom/vvt.nu-cli
+[submodule "vvt-cli"]
+	path = vvt-cli
+	url = https://github.com/rendom/vvt-cli
